copy home layout to sites

--- a/main/index.html
+++ b/main/index.html
@@ -174,7 +174,7 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="tot-accepted-ip-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-accepted-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -188,7 +188,7 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="tot-rejected-ip-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-rejected-ip-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -196,8 +196,6 @@
                             </div>
                         </div>
 
-                        <!--rates-->
-                        <!--                    <div class="col-xl-4 col-md-4 col-12">-->
                         <div class="row">
 
                             <div class="col-xl-6 col-md-6 col-12">
@@ -210,9 +208,8 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0" id="accepted_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="accepted_per"></h2>
                                             </div>
-                                            <!--                                    <img src="../images/trash.png" alt="" style="height: 62px">-->
                                         </div>
                                     </div>
                                 </div>
@@ -227,7 +224,7 @@
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
                                                     نسبة المرفوضات من المخلفات الصالحة للمعالجة
                                                 </h5>
-                                                <h2 class="mb-0" id="rejected_per"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center" id="rejected_per"></h2>
                                             </div>
                                             <!--                                    <img src="../images/trash.png" alt="" style="height: 62px">-->
                                         </div>
@@ -235,7 +232,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--                    </div>-->
                     </div>
 
                     <!--taht el tashgheel-->
@@ -244,12 +240,12 @@
                             <div class="popup-content-operations">
                                         <span class="close"
                                               id="closeOperationsPopupBtn">&times;</span>
-                                <h2 style="font-size: 21px;margin-bottom: 35px;">تغيير الكميات التراكمية والنسب من
+                                <h2 style="font-size: 21px;margin-bottom: 22px;">تغيير الكميات التراكمية والنسب من
                                     المخلفات الصالحة للمعالجة
                                     لليوم</h2>
-                                <span style="position:relative;font-size:medium;right: 160px">النسبة</span>
+                                <span style="position:absolute;font-size:medium;right: 175px">النسبة</span>
                                 <span style="position:absolute;font-size:medium;right: 275px">الكمية المتراكمة</span>
-                                <div class="row" style="margin-top: 10px;">
+                                <div class="row" style="margin-top: 55px;">
                                     <form id="percentageForm">
                                     </form>
                                     <form id="accuWeightForm">
@@ -257,7 +253,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="box pull-up">
+                        <div class="box pull-up" style="background: radial-gradient(#ffffff, #F9F9F9);">
                             <div class="box-body">
                                 <div class="d-flex flex-column">
 
@@ -323,7 +319,7 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     اسمدة عضوية
                                                 </h5>
-                                                <h2 id="tot-asmeda-op-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-asmeda-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -340,7 +336,7 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     وقود بديل
                                                 </h5>
-                                                <h2 id="tot-waqood-op-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-waqood-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -359,7 +355,7 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مرفوضات
                                                 </h5>
-                                                <h2 id="tot-marfoodat-op-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-marfoodat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -376,7 +372,7 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مفروزات
                                                 </h5>
-                                                <h2 id="tot-mafroozat-op-box" class="mb-0 fs-5"></h2>
+                                                <h2 id="tot-mafroozat-op-box" class="mb-0 fs-4 d-flex justify-content-center"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -430,7 +426,7 @@
                                     <h2 style="font-size: 21px;">
                                         تغيير الكميات المستهدفة يوميا لمدخلات لكل مركز
                                     </h2>
-                                    <form id="dataInputForm">
+                                    <form id="targetsForm">
                                     </form>
                                 </div>
                             </div>
