Fixed data in excel sheet

--- a/main/site3.html
+++ b/main/site3.html
@@ -373,7 +373,7 @@
                     <tr>
                         <th class="searchable-column">رقم التذكرة</th>
                         <th class="searchable-column">العميل</th>
-                        <th class="searchable-column">الوحدة المحلية</th>
+<!--                        <th class="searchable-column">الوحدة المحلية</th>-->
                         <th class="searchable-column">نوع الشحنة</th>
                         <!--                        <th class="searchable-column">اسم الصنف</th>-->
                         <!--                        <th class="searchable-column">المحافظة</th>-->
