Add item names to tables

--- a/main/site6.html
+++ b/main/site6.html
@@ -513,7 +513,7 @@
                         <th class="searchable-column">العميل</th>
                         <th class="searchable-column">الوحدة المحلية</th>
                         <th class="searchable-column">نوع الشحنة</th>
-                        <!--                        <th class="searchable-column">اسم الصنف</th>-->
+                        <th class="searchable-column">الصنف</th>
                         <!--                        <th class="searchable-column">المحافظة</th>-->
                         <th class="searchable-column">رقم السيارة</th>
                         <th class="searchable-column">الوزن الاول (كجم)</th>
