--- a/main/site3.html
+++ b/main/site3.html
@@ -338,7 +338,7 @@
                         <th class="searchable-column">العميل</th>
 <!--                        <th class="searchable-column">الوحدة المحلية</th>-->
                         <th class="searchable-column">نوع الشحنة</th>
-                        <!--                        <th class="searchable-column">اسم الصنف</th>-->
+                        <!--                        <th class="searchable-column">الصنف</th>-->
                         <!--                        <th class="searchable-column">المحافظة</th>-->
                         <th class="searchable-column">رقم السيارة</th>
                         <th class="searchable-column">الوزن الاول (كجم)</th>
