--- a/main/index.html
+++ b/main/index.html
@@ -236,50 +236,28 @@
 
                     <!--taht el tashgheel-->
                     <div class="col-xl-4 col-md-4 col-12">
-                        <div id="popupContainerOperations" class="popup">
-                            <div class="popup-content-operations">
-                                        <span class="close"
-                                              id="closeOperationsPopupBtn">&times;</span>
-                                <h2 style="font-size: 21px;margin-bottom: 22px;">تغيير الكميات التراكمية والنسب من
-                                    المخلفات الصالحة للمعالجة
-                                    لليوم</h2>
-                                <span style="position:absolute;font-size:medium;right: 175px">النسبة</span>
-                                <span style="position:absolute;font-size:medium;right: 275px">الكمية المتراكمة</span>
-                                <div class="row" style="margin-top: 55px;">
-                                    <form id="percentageForm">
-                                    </form>
-                                    <form id="accuWeightForm">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
                         <div class="box pull-up" style="background: radial-gradient(#ffffff, #F9F9F9);">
                             <div class="box-body">
                                 <div class="d-flex flex-column">
 
-                                    <h5 class="fs-4 mb-0" style="color: #003F5C; font-weight: bold; margin: auto">
+                                    <h5 class="fs-4 " style="color: #003F5C; font-weight: bold; margin: auto auto 28px;">
                                         تحت التشغيل اليوم
                                     </h5>
-                                    <button id="openOperationPopupBtn">تعديل</button>
                                     <div class="d-flex justify-content-between" style="color: #2da075">
-                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية<span
-                                                id="asmeda-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية</span>
                                         <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
                                     </div>
                                     <div class="d-flex justify-content-between" style="color: #10d6b4">
-                                        <span class="operations-label fs-4 fw-500">مرفوضات<span
-                                                id="marfoodat-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-label fs-4 fw-500">مرفوضات</span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="marfoodat-operation-weight"></span>
                                     </div>
                                     <div class="d-flex justify-content-between" style="color: #1427c9">
-                                        <span class="operations-label fs-4 fw-500">وقود بديل<span
-                                                id="waqood-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-label fs-4 fw-500">وقود بديل</span>
                                         <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
                                     </div>
                                     <div class="d-flex justify-content-between" style="color: #85a6e9">
-                                        <span class="operations-label fs-4 fw-500">مفروزات<span
-                                                id="mafroozat-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-label fs-4 fw-500">مفروزات</span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="mafroozat-operation-weight"></span>
                                     </div>
