--- a/main/site6.html
+++ b/main/site6.html
@@ -262,31 +262,31 @@
                             <div class="box-body">
                                 <div class="d-flex flex-column">
 
-                                    <h5 class="fs-4 mb-0" style="color: #003F5C; font-weight: bold; margin: auto">
+                                    <h5 class="fs-4 " style="color: #003F5C; font-weight: bold; margin: auto">
                                         تحت التشغيل اليوم
                                     </h5>
                                     <button id="openOperationPopupBtn">تعديل</button>
-                                    <div class="d-flex justify-content-between" style="color: #2da075">
-                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية<span
-                                                id="asmeda-percentage" style="font-size: medium"></span></span>
-                                        <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
-                                    </div>
                                     <div class="d-flex justify-content-between" style="color: #10d6b4">
                                         <span class="operations-label fs-4 fw-500">مرفوضات<span
                                                 id="marfoodat-percentage" style="font-size: medium"></span></span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="marfoodat-operation-weight"></span>
                                     </div>
-                                    <div class="d-flex justify-content-between" style="color: #1427c9">
-                                        <span class="operations-label fs-4 fw-500">وقود بديل<span
-                                                id="waqood-percentage" style="font-size: medium"></span></span>
-                                        <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
-                                    </div>
                                     <div class="d-flex justify-content-between" style="color: #85a6e9">
                                         <span class="operations-label fs-4 fw-500">مفروزات<span
                                                 id="mafroozat-percentage" style="font-size: medium"></span></span>
                                         <span class="operations-value fs-4 fw-500"
                                               id="mafroozat-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #2da075">
+                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية<span
+                                                id="asmeda-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #1427c9">
+                                        <span class="operations-label fs-4 fw-500">وقود بديل<span
+                                                id="waqood-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
                                     </div>
                                 </div>
                             </div>
